@@ -47,6 +47,8 @@ DEFAULTS = {
     "tftpd_conf"                  : "/etc/xinetd.d/tftp",
     "webdir"                      : "/var/www/cobbler",
     "xmlrpc_port"                 : 25151,
+    "xmlrpc_rw_enabled"           : 0,
+    "xmlrpc_rw_port"              : 25152,
     "yum_core_mirror_from_server" : 0
 }
 
