@@ -14,6 +14,12 @@ AliasMatch ^/cobbler(.*)?$ "/var/www/cobbler$1"
 
 ProxyRequests off
 
-ProxyPass /cobbler_api http://localhost:25150/
-ProxyPassReverse /cobbler_api http://localhost:25150/
+ProxyPass /cobbler_api http://localhost:25151/
+ProxyPassReverse /cobbler_api http://localhost:25151/
+
+# TO DO: SSL
+
+ProxyPass /cobbler_api_rw http://localhost:25152/
+ProxyPassReverse /cobbler_api_rw http://localhost:25152/
+
 
