@@ -13,6 +13,7 @@
 <li><a href="./cobbler-import.php">A Quickstart Guide on Using "import"</a></li>
 <li><a href="./cobbler-repos.php">Using Cobbler to manage yum repositories</a></li>
 <li><a href="./cobbler-dhcp.php">Cobbler's DHCP management features</a></li>
+<li><a href="http://www.redhatmagazine.com/2007/08/10/cobbler-how-to-set-up-a-network-boot-server-in-10-minutes/">Red Hat Magazine Article</A>
 </ul>
 
 </ul>
